tests/baselines/reference/genericConstraintSatisfaction1.errors.txt
tests/cases/compiler/genericConstraintSatisfaction1.ts(6,5): error TS2345: Argument of type '{ s: number; }' is not assignable to parameter of type '{ s: string; }'.
  Types of property 's' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/genericConstraintSatisfaction1.ts (1 errors) ====
    interface I<S> {
       f: <T extends S>(x: T) => void
    }
     
    var x: I<{s: string}>
    x.f({s: 1})
        ~~~~~~
!!! error TS2345: Argument of type '{ s: number; }' is not assignable to parameter of type '{ s: string; }'.
!!! error TS2345:   Types of property 's' are incompatible.
!!! error TS2345:     Type 'number' is not assignable to type 'string'.
    